# OpenDesk

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  PRODUCT_ARCHITECTURE.md  PYTHON_AI_RUNTIME_ARCHITECTURE.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.lint.json
.cargo/: config.toml
.cursor/commands/: plan.md  quality-gate.md
.cursor/rules/: .gitignore  README.md  branch-workflow.mdc  frontend.md  git-commit-cn.mdc  master.md  plan-execution.mdc  python.md  rust.md
.cursor/skills/opendesk/: SKILL.md
.cursor/skills/opendesk-doc-comments/: SKILL.md  coding-standards.md
.cursor/skills/search-first/: SKILL.md
.cursor/skills/verification-loop/: SKILL.md
.github/workflows/: build-locked.yml  lint.yml  release-desktop.yml
.husky/: post-checkout  pre-commit
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/binaries/: .gitignore
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
contracts/: CHANGELOG.md  README.md
contracts/codegen/: README.md
contracts/compatibility/: FIELD_RULES.md  MIGRATION.md
contracts/openapi/: sidecar.v1.yaml
contracts/openapi/sidecar.paths/: agent_ping.yaml  crawler_job_cancel.yaml  crawler_job_logs.yaml  crawler_job_start.yaml  crawler_job_status.yaml  runtime_llm_test_connection.yaml
crates/adapter/: Cargo.toml  build.rs
crates/adapter/src/: agent_sidecar.rs  lib.rs
crates/adapter/src/license/: fail_closed.rs  host_security.rs  mod.rs  unlocked.rs  verifier.rs
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/app/: Cargo.toml
crates/app/src/: crawler_emit.rs  lib.rs  logging.rs  paths.rs  platform.rs  state.rs
crates/app/src/commands/: agent.rs  customer.rs  license.rs  llm.rs  mail.rs  mod.rs  workflow.rs
crates/app/src/commands/crawler/: channels.rs  job.rs  keywords.rs  mod.rs  settings.rs
crates/browser/: Cargo.toml
crates/browser/src/: lib.rs
crates/channel/: Cargo.toml
crates/channel/src/: lib.rs
crates/chat/: Cargo.toml
crates/chat/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  license.rs
crates/crawler/: Cargo.toml
crates/crawler-enrich/: Cargo.toml  README.md
crates/crawler-enrich/assets/templates/: README.md
crates/crawler-enrich/src/: capture.rs  channel.rs  extract.rs  flow.rs  input.rs  lib.rs  vision.rs
crates/crawler/src/: emit.rs  i18n.rs  lib.rs
crates/customer/: Cargo.toml
crates/customer/src/: lib.rs
crates/file/: Cargo.toml
crates/file/src/: lib.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: lib.rs
crates/knowledge/: Cargo.toml
crates/knowledge/src/: lib.rs
crates/mail/: Cargo.toml
crates/mail-net/: Cargo.toml
crates/mail-net/src/: imap.rs  lib.rs
crates/mail/src/: lib.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs
crates/ocr/: Cargo.toml
crates/ocr/src/: lib.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: lib.rs
crates/ports/: Cargo.toml
crates/ports/src/: background_job.rs  crawler_channels.rs  crawler_keywords.rs  crawler_settings.rs  customer.rs  lib.rs  license.rs  llm_settings.rs  mail.rs  repository.rs  sidecar.rs  workflow.rs
crates/runtime/: Cargo.toml  build.rs
crates/runtime/src/: lib.rs
crates/runtime/src/sidecar/: client.rs  lifecycle.rs  log_pipe.rs  mod.rs
crates/runtime/src/sidecar/routes/: agent_ping.rs  crawler_job_cancel.rs  crawler_job_logs.rs  crawler_job_start.rs  crawler_job_status.rs  llm_test_connection.rs  manage.rs  mod.rs
crates/storage/: Cargo.toml  diesel.toml
crates/tenant/: Cargo.toml
crates/user/: Cargo.toml
crates/vector/: Cargo.toml
crates/worker/: Cargo.toml
crates/worker/src/: job_runner.rs  main.rs  paths.rs
crates/worker/src/handlers/: crawler_email_enrich.rs  imap_sync.rs  mod.rs
crates/workflow/: Cargo.toml
docs/: PROJECT_ANALYSIS.md
docs/architecture/: README.md  database-schema.md  process-model.md  product-architecture.md  python-ai-runtime-architecture.md  whatsapp-webhook-deployment.md
docs/managed/: CONTEXT_POLICY.md  GOVERNANCE.md  MVP_REVIEW.md  README.md
plan/: EXECUTION.md
plan/completed/: T001-architecture-compliance.md  T002-contract-codegen.md  T003-agent-ping-e2e.md  T004-sidecar-lifecycle.md  T005-tracing-log-pipe.md  T006-sidecar-auto-restart-event.md  T007-kernel-event-bus.md  T008-kernel-task-scheduler.md  T009-storage-record-store.md  T010-sidecar-management-api.md  T011-frontend-routes-scaffold.md  T012-agent-feature-vertical-slice.md  T013-ui-layout-primitives.md  T014-custom-titlebar.md  T015-app-header-bar.md  T016-shell-refactor-nav-registry.md  T017-feature-page-scaffold.md  T018-sidecar-production-bundle.md
plan/in-progress/: README.md
plan/pending/: T013-ui-layout-primitives.md  T014-custom-titlebar.md  T015-app-header-bar.md  T016-shell-refactor-nav-registry.md  T017-feature-page-scaffold.md
plugins/demo/: README.md
plugins/sdk/: README.md
python/sidecar/: __init__.py  main.py  pyproject.toml  routes.py  sidecar.spec
python/sidecar/sidecar/: __init__.py  logging_config.py  main.py  routes.py  server.py
python/sidecar/sidecar/api/: __init__.py  handler.py  http_io.py  manage.py  registry.py  routes.py  server.py
scripts/: import_email_agent_mail_workflow.py
skills/opendesk/: README.md
subscription/: .gitignore  Cargo.toml  README.md  build.rs
subscription/keys/: public_key.pem
subscription/src/: activation_state.rs  attestation.rs  claims.rs  crypto.rs  embedded.rs  issue.rs  key_file.rs  lib.rs  machine_code.rs  sign.rs  verify.rs
subscription/tests/: activation_flow.rs
subscription/ui/: activation_gen.slint
tooling/: README-openssl-windows.md
tooling/scripts/: build-license-verifier.mjs  build-sidecar.mjs  lint-python-fix.mjs  lint-python.mjs  lint-rust-fix.mjs  lint-rust.mjs  pre-commit.mjs  run-activation-gen-gui.mjs  tauri-build-locked.mjs  tauri-dev-locked.mjs  tauri.mjs
tooling/strawberry-perl/: .gitignore
(+544 files in other folders)
