[workspace]
resolver = "2"
members = [
  "apps/desktop/src-tauri",
  "crates/app",
  "crates/kernel",
  "crates/common",
  "crates/ports",
  "crates/adapter",
  "crates/runtime",
  "crates/chat",
  "crates/mail",
  "crates/agent",
  "crates/workflow",
  "crates/knowledge",
  "crates/browser",
  "crates/ocr",
  "crates/mcp",
  "crates/plugin",
  "crates/tenant",
  "crates/user",
  "crates/channel",
  "crates/storage",
  "crates/vector",
  "crates/file",
  "crates/mail-net",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OpenDesk Team"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-opener = "2"
