[workspace]
resolver = "2"
members = [
  "apps/desktop/src-tauri",
  "crates/app",
  "crates/customer",
  "crates/crawler",
  "crates/crawler-enrich",
  "crates/kernel",
  "crates/common",
  "crates/ports",
  "crates/adapter",
  "crates/runtime",
  "crates/chat",
  "crates/mail",
  "crates/agent",
  "crates/workflow",
  "crates/knowledge",
  "crates/browser",
  "crates/ocr",
  "crates/mcp",
  "crates/plugin",
  "crates/tenant",
  "crates/user",
  "crates/channel",
  "crates/storage",
  "crates/vector",
  "crates/file",
  "crates/mail-net",
  "crates/worker",
]
exclude = ["subscription"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OpenDesk Team"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-opener = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
async-trait = "0.1"
tokio = { version = "1", features = ["process", "io-util", "time", "sync", "rt", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
diesel = { version = "2.2", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.2"
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
keyring = { version = "3", default-features = false, features = [
  "apple-native",
  "windows-native",
  "linux-native-sync-persistent",
  "crypto-rust",
] }
lettre = { version = "0.11", default-features = false, features = [
  "builder",
  "hostname",
  "smtp-transport",
  "pool",
  "native-tls",
] }
imap = "2.4"
native-tls = "0.2"
mailparse = "0.16"
rand = "0.8"
enigo = "0.3"
screenshots = "0.8"
imageproc = "0.25"
