[project]
name = "opendesk"
version = "0.1.0"
description = "OpenDesk AI customer service desktop platform"
readme = "README.md"
requires-python = ">=3.13"

[dependency-groups]
dev = [
  "ruff>=0.11",
]

[tool.uv.workspace]
members = [
  "python/sidecar",
  "python/packages/contracts",
  "python/packages/shared",
  "python/packages/gateway",
  "python/packages/queue",
  "python/packages/worker",
  "python/packages/provider",
  "python/packages/llm",
  "python/packages/rag",
  "python/packages/ocr",
  "python/packages/agent",
  "python/packages/browser",
  "python/packages/workflow",
  "python/packages/prompt",
  "python/packages/memory",
  "python/packages/model",
]

[tool.uv.sources]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["python"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
  "N",
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = [
  "agent",
  "browser",
  "contracts",
  "gateway",
  "llm",
  "memory",
  "model",
  "ocr",
  "prompt",
  "provider",
  "queue",
  "rag",
  "shared",
  "worker",
  "workflow",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
