[package]
name = "subscription-activation-generator"
version = "0.1.0"
edition = "2021"
description = "Offline activation generator + license verifier (vendored OpenSSL)"
build = "build.rs"

[lib]
name = "subscription_activation"
path = "src/lib.rs"

[[bin]]
name = "activation-gen"
path = "src/bin/activation_gen.rs"

[[bin]]
name = "license-verifier"
path = "src/bin/license_verifier.rs"

[[bin]]
name = "activation-gen-gui"
path = "src/bin/activation_gen_gui.rs"
required-features = ["gui"]

[features]
default = []
# 管理员本机 GUI；OpenDesk 打 verifier 时不要开此 feature，避免拖慢构建。
gui = ["dep:slint", "dep:slint-build"]

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
hmac = "0.12"
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
slint = { version = "1.10", optional = true, default-features = false, features = ["backend-winit", "renderer-software", "compat-1-2", "std"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
sha2 = "0.10"
slint-build = { version = "1.10", optional = true }
