[package]
name = "adapter"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
base64 = "0.22"
common = { path = "../common" }
hmac = "0.12"
ports = { path = "../ports" }
runtime = { path = "../runtime" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
