[package]
name = "app"
version.workspace = true
edition.workspace = true

[features]
default = []
license-lock = []

[dependencies]
async-trait = { workspace = true }
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
common = { path = "../common" }
adapter = { path = "../adapter" }
agent = { path = "../agent" }
crawler = { path = "../crawler" }
customer = { path = "../customer" }
mail = { path = "../mail" }
ports = { path = "../ports" }
storage = { path = "../storage" }
runtime = { path = "../runtime" }
kernel = { path = "../kernel" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["time"] }
dirs = { workspace = true }
uuid = { workspace = true }
