[package]
name = "runtime"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2"
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
common = { path = "../common" }
kernel = { path = "../kernel" }
