[package]
name = "opendesk-worker"
version.workspace = true
edition.workspace = true
description = "Background job worker for OCR and crawler enrichment"

[[bin]]
name = "opendesk-worker"
path = "src/main.rs"

[dependencies]
crawler-enrich = { path = "../crawler-enrich" }
dirs = { workspace = true }
mail-net = { path = "../mail-net" }
ports = { path = "../ports" }
serde = { workspace = true }
serde_json = { workspace = true }
storage = { path = "../storage" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = "2"
