[project]
name = "sidecar"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "gateway",
  "shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sidecar"]

[tool.uv.sources]
gateway = { workspace = true }
shared = { workspace = true }
